# graphomer_pyg

./: LICENSE  README.md  pyproject.toml  requirements.yaml  setup.py
graphomer/datamodule/: __init__.py  dataloder.py  shortest_path.py
graphomer/datamodule/featurizer/: features.py  featurizer.py  utils.py
graphomer/model/: __init__.py  embeddings.py  graphomer.py  layers.py
graphomer/module/: trainsystem.py
notebooks/: testbed.ipynb
