[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "graphomer"
version = "1.0.0"
description = "Graphomer implementation using PyG"
readme = "README.md"
authors = [
  { name = "Astraightrain", email = "sanice1229@gmail.com" },
]
keywords = ["python"]
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pylint", "black", "isort", "pre-commit", "pytest"]

[tool.pylint.messages_control]
max-line-length = 120
disable = "too-many-arguments"
extension-pkg-whitelist = "rdkit"

[tool.pylint.format]
good-names = ["i", "j", "k", "e", "ex", "Run", "_", "df", "oe", "G"]

[tool.black]
line-length = 120

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
addopts = "-ra" # Explain all skipped, failed, errored tests
